Fix: height overflow on the page

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,6 @@ body {
   background-color: #fff;
   margin: 0;
   overflow-x: hidden;
-  /* text-align: center; */
 }
 
 * {
@@ -593,24 +592,6 @@ a#prc {
     right: -17em;
   }
 
-  /* #trim-btn {
-    font-family: 'Gilroy-SemiBold', sans-serif;
-    font-size: 14px;
-    line-height: 12px;
-    letter-spacing: 0em;
-    text-align: center;
-    margin-left: -3.5em;
-    width: 390px;
-    height: 38px;
-    color: #FFFFFF;
-    background: #3284FF;
-    margin-block-start: -2em; /* margin-top 
-    border-radius: 5px;
-    border: 2px solid;
-    background: #0065fe;
-    border-radius: 100px;
-  } */
-
   .terms {   
     font-family: 'Gilroy-Medium', sans-serif;
     font-size: 12px;
@@ -773,7 +754,7 @@ a#prc {
     margin-block-start: 3em;
     margin-inline-start: 2em;
     width: 100em;
-    height: 100em; 
+    height: 3em; 
     /* padding-block-end: 2em; */
   }
 
@@ -831,7 +812,6 @@ a#prc {
     position: relative;
     bottom: -25rem;
     right: 20rem;
-    /* overflow-x: clip; */
   }
 
   #terms-cond {
@@ -845,20 +825,12 @@ a#prc {
     background-image: url('data:image/svg+xml,<svg width="282" height="237" viewBox="0 0 282 237" fill="none" xmlns="http://www.w3.org/2000/svg"><path opacity="0.5" fill-rule="evenodd" clip-rule="evenodd" d="M2.62215 341.153C-3.17628 300.037 2.0152 256.123 24.4812 213.097C45.359 173.112 82.4614 139.772 122.944 110.712C161.774 82.8399 205.124 66.9811 249.858 51.3149C307.187 31.2388 377.548 -17.8342 419.579 6.83164C462.817 32.2045 423.193 102.548 422.699 152.744C422.372 186.111 424.134 216.996 417.182 251.261C408.532 293.897 418.154 344.247 377.344 376.313C336.59 408.335 282.729 381.814 233.522 395.57C172.961 412.499 113.571 477.647 60.0053 465.024C8.12976 452.798 9.32928 388.724 2.62215 341.153Z" fill="url(%23paint0_linear_1_494)" fill-opacity="0.6"/><defs><linearGradient id="paint0_linear_1_494" x1="441.815" y1="305.507" x2="44.6208" y2="237.159" gradientUnits="userSpaceOnUse"><stop stop-color="%23005AE2"/><stop offset="1" stop-color="%2373E6FF" stop-opacity="0.38"/></linearGradient></defs></svg>');
   }
 
-  /* #terms-cond #sect,  #terms-cond #copyright {
-    margin-left: 1em;
-    /* text-align: center; 
-  }
-  */
-
-
   /* THIS IS THE CODE FOR BASIC & TEAMS PRICING */
   /* THIS IS WHERE I WILL REMOVE THE BLUE BORDER */
 .ft-page {
   width: 15rem;
   height: 24rem;
   border-radius: 7px 0 0 7px;
-  /* border: 1px solid lightskyblue; */
   padding-inline-start: 1.5rem;
 }
 
@@ -869,41 +841,3 @@ a#prc {
 .col-three {
   border-radius: 0 7px 7px 0; /* top-left, top-right, bottom-right & bottom-left corners */
 }
-
-/* .rect-image {
-    position: absolute;
-      /* top: 25px; */
-/* left: 25px;
-      bottom: -330px;
-      z-index: 2;
-      color:#F8F7F7; */
-
-/* position:absolute;
-      /* top: 25px; */
-/* left: 25px;
-      bottom: -330px; 
-      z-index: 2;
-      margin-inline-start: 250px; */
-/* } */
-
-/* .cta {
-    width: 79px;
-    height: 12px;
-    line-height: 12px;
-} */
-
-/* li { */
-/* list-style-type: none; This removes the UL bullet points */
-/* display: flex; */
-/* justify-content: space-between; */
-/* } */
-
-/* .nav-list .list-item {
-    display: inline-block;
-} */
-
-/* .nav-list-one, .nav-list-two {
-    display: flex;
-    /* align-items: center; */
-/* justify-content: space-around; */
-/* }  */
